# test-task-for-DragonsLake

2022_linux_mac/task_done_by_Oleksandr_Yaroshenko/: README.txt
2022_linux_mac/task_done_by_Oleksandr_Yaroshenko/Project/: CMakeLists.txt  game.cpp  notes.txt
2022_linux_mac/task_done_by_Oleksandr_Yaroshenko/Project/Framework/: CMakeLists.txt
2022_linux_mac/task_done_by_Oleksandr_Yaroshenko/Project/Framework/inc/: Framework.h
2022_linux_mac/task_done_by_Oleksandr_Yaroshenko/Project/Framework/src/: launch.cpp
2022_linux_mac/task_done_by_Oleksandr_Yaroshenko/Project/code/: Ability.h  Background.h  CoordinatesConverter.h  DisappearingPlatform.h  Enemy.h  Entity.h  FireProjectile.h  GameEngine.h  MovingEntity.h  Platform.h  Player.h  ProjectSprites.h  Propeller.h  Shield.h  StaticEntity.h  TimerEvent.h  Window.h
2022_linux_mac/task_done_by_Oleksandr_Yaroshenko/Project/code/sources/: Ability.cpp  Background.cpp  CoordinatesConverter.cpp  DisappearingPlatform.cpp  Enemy.cpp  Entity.cpp  FireProjectile.cpp  GameEngine.cpp  MovingEntity.cpp  Platform.cpp  Player.cpp  ProjectSprites.cpp  Propeller.cpp  Shield.cpp  StaticEntity.cpp  Window.cpp
